exports[`module "router/route/action" enhancer resource() - type "collection" resolves with a serialized payload 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "body": "Perspiciatis fugit iusto aut est voluptatum expedita velit. Earum accusantium quia. Enim modi non.
 Est voluptatem doloribus molestias voluptatem. Reprehenderit inventore rerum aperiam hic iste aliquam. Perferendis error autem in quasi at et. Deserunt asperiores impedit.
 Omnis placeat amet voluptas magnam magnam dolorum corrupti perspiciatis mollitia. Et sint commodi. Et consequatur error maxime non ex est iure nesciunt. A eveniet similique voluptas in eum fugiat nulla necessitatibus. Dolorum quia perspiciatis unde minima omnis nostrum accusamus enim impedit. Aut odio ut et consequatur ducimus.",
        "created-at": 2017-02-13T13:30:30.291Z,
        "title": "Doloribus eligendi possimus occaecati nihil modi minima minima facere eveniet.",
        "updated-at": 2017-02-13T13:30:30.291Z,
      },
      "id": "3",
      "links": Object {
        "self": "http://localhost:4000/posts/3",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "45",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Sit est ad sit. Culpa repellat vel dolores consequatur enim in optio recusandae. Doloremque temporibus magni aliquid quam harum. Et et asperiores sit debitis sunt rem et perspiciatis velit.
 Dicta possimus dolores dolorem sunt voluptas impedit. Doloremque odio et. Omnis officiis aut non nam. Suscipit blanditiis magni dignissimos.
 Numquam qui commodi cupiditate autem quam doloribus dolores distinctio. Qui eaque sint. Corporis cumque quae dolor et totam architecto. Id tempore suscipit officia repellat voluptates.",
        "created-at": 2017-02-13T13:30:30.291Z,
        "title": "Modi aliquam alias amet ratione provident et non.",
        "updated-at": 2017-02-13T13:30:30.291Z,
      },
      "id": "5",
      "links": Object {
        "self": "http://localhost:4000/posts/5",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "81",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "77",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "74",
              "type": "tags",
            },
            Object {
              "id": "90",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Illo fugit iure voluptatem. Sit velit qui reprehenderit eum. Nemo exercitationem quibusdam harum quia voluptatem accusamus ipsam voluptas sit. Corporis consequuntur voluptatem ut repudiandae ut totam. Pariatur sequi corporis qui inventore quaerat beatae.
 Voluptatem autem enim et eligendi eligendi consequatur temporibus. Quam porro ducimus recusandae labore delectus a. Quae quisquam illum mollitia omnis dolores totam. Incidunt facilis rerum. Amet cum quia.
 Magnam illum tempora est quia non perferendis libero sit ducimus. Inventore qui et soluta. Velit voluptatibus nemo officiis rem nemo provident consectetur ut.",
        "created-at": 2017-02-13T13:30:30.292Z,
        "title": "Enim iste mollitia est culpa ab voluptatem.",
        "updated-at": 2017-02-13T13:30:30.292Z,
      },
      "id": "9",
      "links": Object {
        "self": "http://localhost:4000/posts/9",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "53",
              "type": "comments",
            },
            Object {
              "id": "65",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "74",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/74",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Qui similique sed impedit occaecati explicabo soluta. Rerum quia enim dolores quo totam veritatis et. Corrupti odit molestias in eius quidem nisi autem.
 Dolores blanditiis vel modi illo sit et. Aliquid molestiae cumque quaerat ea illum aut nemo ut necessitatibus. Blanditiis veritatis voluptatibus rerum sapiente. Quam hic doloremque ullam explicabo aut illum amet.
 Impedit numquam inventore fugiat omnis eius tenetur aut est soluta. Quo eos vel. Veritatis labore ratione aut eum incidunt consectetur est sapiente. Voluptatum rem voluptatibus aut delectus odit rem dicta. Nam aut sed nam. Aperiam temporibus repellendus et rerum non voluptas hic qui saepe.",
        "created-at": 2017-02-13T13:30:30.292Z,
        "title": "Commodi vero incidunt natus cumque.",
        "updated-at": 2017-02-13T13:30:30.292Z,
      },
      "id": "11",
      "links": Object {
        "self": "http://localhost:4000/posts/11",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "86",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "68",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Ullam possimus aut quia et omnis est et. Culpa soluta quas officiis. Sunt aspernatur ullam fuga beatae temporibus. Quae enim minima id. Rem nemo distinctio ipsum odio voluptates qui nisi. Vel animi quia amet rerum ex reprehenderit quia architecto.
 Sunt veniam deserunt atque rerum vel perspiciatis quos. Earum cupiditate nobis dolor officia. Veritatis rerum a in rerum est error. Totam numquam quis. Praesentium distinctio et ut et. Laboriosam quia exercitationem quos et est eum sed consequatur nulla.
 Dignissimos quia est ut neque occaecati id voluptatem et. Sunt esse odit alias veniam dolorem voluptatibus. Recusandae vel unde culpa. Illum debitis delectus dolorem ullam minima excepturi consequatur.",
        "created-at": 2017-02-13T13:30:30.292Z,
        "title": "Est aspernatur aut magni quas maxime mollitia.",
        "updated-at": 2017-02-13T13:30:30.292Z,
      },
      "id": "15",
      "links": Object {
        "self": "http://localhost:4000/posts/15",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "29",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "8",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Omnis quod qui. Velit et dolor doloremque vero soluta quaerat dolore. Minima dolores debitis nihil autem distinctio eius non quaerat. Ipsa iusto libero voluptatibus expedita repellendus quia veniam laboriosam. Explicabo dignissimos aperiam modi et amet consequatur odio recusandae. Pariatur necessitatibus voluptatem eaque sunt nisi aperiam.
 Accusamus eius cupiditate earum et vel repudiandae dolores tempora mollitia. In in iste quos. Quia quaerat saepe minima omnis quis dolores accusantium voluptas molestias. Voluptates corrupti quis animi sunt tempora aut tenetur doloribus suscipit. Architecto deleniti ut ut ipsam molestiae maxime.
 Earum eum quos eveniet sequi voluptas at minus. Mollitia id et. Quo sit repellendus quasi. Eligendi expedita dolor amet sint. Totam occaecati non quis possimus voluptatem.",
        "created-at": 2017-02-13T13:30:30.292Z,
        "title": "Rem tenetur perferendis excepturi dignissimos ea.",
        "updated-at": 2017-02-13T13:30:30.292Z,
      },
      "id": "18",
      "links": Object {
        "self": "http://localhost:4000/posts/18",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "33",
              "type": "comments",
            },
            Object {
              "id": "58",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "75",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/75",
          },
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "84",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "97",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Dolorum modi ut corporis vel. Harum eum possimus veritatis dolorem blanditiis voluptatem incidunt libero. Quaerat ipsam optio quaerat dignissimos aliquid deserunt. Autem corporis vitae velit autem aut. Voluptates consequuntur aliquid voluptas consequatur ut.
 Ab distinctio sit. Harum nesciunt eius nisi dolor molestiae distinctio amet et dolores. Sapiente debitis in doloribus necessitatibus rerum quasi dolores excepturi. Accusantium incidunt placeat.
 Eos eos vero nesciunt. Quibusdam debitis magni ut provident. Est ratione molestias velit cumque distinctio voluptas at accusamus minima. Ipsum assumenda architecto est molestiae sint reiciendis aut ut.",
        "created-at": 2017-02-13T13:30:30.292Z,
        "title": "Maxime sapiente vitae illo ea excepturi optio iste ducimus.",
        "updated-at": 2017-02-13T13:30:30.292Z,
      },
      "id": "19",
      "links": Object {
        "self": "http://localhost:4000/posts/19",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Animi ullam quis. Corrupti voluptatibus sit facere dolores doloribus rerum. Cupiditate et alias dolorem aut. Molestias odit et illo eius. Sint autem est nihil. Perspiciatis corporis optio.
 Fuga velit aliquam sed voluptatum. Dolore rerum tenetur quis libero sit eum reiciendis a laboriosam. Necessitatibus beatae quia ut fuga id. A magnam excepturi rerum laboriosam et et facilis. Ut harum autem sed quae libero.
 Et quos et placeat voluptatem. Ex laudantium corrupti voluptates nisi corporis. Et ut atque quod consectetur ex. Repudiandae id et cumque velit fugiat vel.",
        "created-at": 2017-02-13T13:30:30.292Z,
        "title": "Non et eaque enim sint voluptatibus ipsa.",
        "updated-at": 2017-02-13T13:30:30.292Z,
      },
      "id": "22",
      "links": Object {
        "self": "http://localhost:4000/posts/22",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": Object {
            "id": "58",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/58",
          },
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "38",
              "type": "reactions",
            },
            Object {
              "id": "74",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "71",
              "type": "tags",
            },
            Object {
              "id": "96",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Laudantium et nesciunt asperiores. Aut voluptas eum repellendus. Consequatur doloremque velit vero et culpa in saepe nihil. Voluptatum sit fugit vero qui qui recusandae ut dicta. Qui a in. Voluptates est quisquam unde suscipit ut aut repellendus.
 Quasi dignissimos laudantium ad provident nobis consectetur est iure ut. Omnis rerum facere optio voluptatum quo illo nesciunt. Laboriosam ab at minus assumenda saepe voluptas deleniti consequuntur. Nulla id veniam.
 Ad explicabo quidem sit. Earum dolor exercitationem alias aut ut dolorum esse. Amet nulla aut ea enim velit vitae quidem in. Quasi amet earum tenetur. Exercitationem voluptatum illo assumenda nesciunt. Voluptates similique tenetur dolore odit et voluptatem.",
        "created-at": 2017-02-13T13:30:30.292Z,
        "title": "Sit ipsa consectetur voluptatibus voluptatum veritatis nemo totam.",
        "updated-at": 2017-02-13T13:30:30.292Z,
      },
      "id": "23",
      "links": Object {
        "self": "http://localhost:4000/posts/23",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "28",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "19",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/19",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "5",
              "type": "tags",
            },
            Object {
              "id": "93",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Sunt voluptates commodi quasi dolor qui qui. Recusandae animi vitae id officia ullam et et laborum assumenda. Ut hic dolores itaque maiores reprehenderit ut ratione facere.
 At eos cumque ut ut sunt labore non facilis et. Corrupti est veritatis. Atque reiciendis sit vitae beatae culpa soluta mollitia magnam. Eos dolores impedit doloremque corporis consectetur asperiores itaque non.
 Ipsa aut eos dolorem assumenda. Magnam nihil corrupti perspiciatis laborum commodi mollitia voluptate non. Et aut nesciunt eos.",
        "created-at": 2017-02-13T13:30:30.292Z,
        "title": "At aut ut animi.",
        "updated-at": 2017-02-13T13:30:30.292Z,
      },
      "id": "24",
      "links": Object {
        "self": "http://localhost:4000/posts/24",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "94",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Dolor quos aperiam exercitationem rem sit aspernatur dolor adipisci ea. Sint rerum sit harum et blanditiis repellat vel et. Cum architecto minima. Veniam accusamus quidem deserunt laborum.
 Nesciunt voluptate rerum impedit iure. In et quia totam. Assumenda possimus quod ipsam doloribus impedit. Voluptatum inventore id quo.
 Ex quia doloremque quia repellendus velit. Tempore adipisci non dolor ipsa ratione ut ducimus. Ut nihil iure veritatis voluptate. Iusto ut sed dignissimos in adipisci.",
        "created-at": 2017-02-13T13:30:30.293Z,
        "title": "Nemo delectus voluptatibus qui voluptas et.",
        "updated-at": 2017-02-13T13:30:30.293Z,
      },
      "id": "26",
      "links": Object {
        "self": "http://localhost:4000/posts/26",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": Object {
            "id": "9",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/9",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "13",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Maiores ipsa tenetur deserunt qui non et explicabo quam aut. Porro aperiam provident aut quos sed quisquam et delectus corrupti. Accusamus et fugit quidem omnis commodi voluptas cumque et dicta.
 Porro hic deleniti qui accusantium aperiam voluptate at occaecati eaque. Magnam animi eos ut repellendus tempora ut suscipit. Perferendis fugiat perspiciatis rerum tempore deserunt in molestiae corporis qui. Labore et et aperiam sint voluptas. Corporis sint enim illum dolorem distinctio dolore possimus veritatis.
 Veniam temporibus voluptas debitis qui atque neque dolores dolor. Voluptatem a reprehenderit voluptas omnis nihil exercitationem quia. Tempore sint et aut perferendis. Quos dolorum ea expedita.",
        "created-at": 2017-02-13T13:30:30.293Z,
        "title": "Necessitatibus vel est beatae ea commodi autem.",
        "updated-at": 2017-02-13T13:30:30.293Z,
      },
      "id": "28",
      "links": Object {
        "self": "http://localhost:4000/posts/28",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "18",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "99",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "In nostrum occaecati accusantium iure quia necessitatibus et repudiandae. Ut ipsum libero est. Debitis ab neque dolor illum et. Qui ducimus et suscipit voluptas iusto dignissimos recusandae in omnis. Explicabo facere natus consequatur perspiciatis.
 Commodi sed quibusdam. Dicta voluptatibus hic fuga consequuntur esse. Aut dolorem neque animi. Occaecati at vitae consequuntur tempore neque doloribus. Aut magni quo voluptatem suscipit accusamus illo soluta. Ut aliquid impedit quia quo nesciunt.
 Distinctio et architecto laudantium in. Voluptatem cumque et voluptatibus consequuntur. Aperiam veritatis animi quos ratione a. Porro laborum vel quasi tempora impedit. Inventore facere officia quam omnis voluptatibus qui architecto molestiae. Optio nobis voluptatibus in ut.",
        "created-at": 2017-02-13T13:30:30.293Z,
        "title": "Blanditiis aut et maxime provident.",
        "updated-at": 2017-02-13T13:30:30.293Z,
      },
      "id": "29",
      "links": Object {
        "self": "http://localhost:4000/posts/29",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "47",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "65",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "96",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Aspernatur velit ut quis sequi. Sit qui ullam molestias ipsum doloremque tempore sed. Reprehenderit est consequatur totam consequuntur delectus similique. Magnam rem officia voluptas pariatur corporis animi nulla ipsum debitis. Iure et omnis ipsam enim fuga.
 Similique consequatur perferendis tempora tempore fuga. Fugit numquam sit itaque autem. Aut quidem cupiditate sequi aliquam illo. Aut a dolor mollitia consequatur aut quaerat voluptatibus. Necessitatibus distinctio porro ad ad architecto rerum rem nihil nobis. Fuga debitis quod praesentium sunt eveniet minima voluptas nobis ipsa.
 Itaque harum laudantium et beatae necessitatibus architecto rerum. Cupiditate veritatis voluptas et eum accusamus. Quae est voluptatibus placeat autem a sint veniam voluptate. Officiis expedita fugit nulla nihil perferendis.",
        "created-at": 2017-02-13T13:30:30.293Z,
        "title": "Doloribus commodi aspernatur voluptatem est soluta vel.",
        "updated-at": 2017-02-13T13:30:30.293Z,
      },
      "id": "34",
      "links": Object {
        "self": "http://localhost:4000/posts/34",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": Object {
            "id": "8",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/8",
          },
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "13",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "64",
              "type": "tags",
            },
            Object {
              "id": "100",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Numquam omnis sint. Ut aperiam quis cupiditate eaque. Voluptate ex suscipit laboriosam distinctio. Voluptatem ut eos. Est id nesciunt culpa qui eum.
 Dolorem ex qui doloribus suscipit repellendus fugiat in sed. Voluptate dignissimos harum quasi. Amet voluptas et ut dolorum voluptatem rerum facere nesciunt. Recusandae nostrum odit maiores recusandae repellendus minima ducimus et quo. Velit dignissimos in sit in. Culpa consequatur qui et porro voluptates ut.
 Eligendi inventore nobis architecto iste pariatur eos est earum nihil. Perspiciatis qui fugiat repudiandae voluptatum sapiente qui omnis est. Illo explicabo in qui cumque possimus ea culpa temporibus.",
        "created-at": 2017-02-13T13:30:30.293Z,
        "title": "Et odio facilis quo at id velit ut aliquam veritatis.",
        "updated-at": 2017-02-13T13:30:30.293Z,
      },
      "id": "38",
      "links": Object {
        "self": "http://localhost:4000/posts/38",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "39",
              "type": "comments",
            },
            Object {
              "id": "64",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "64",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/64",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Fugiat saepe ea magni amet quos ea ullam. Tenetur impedit eveniet soluta magni ullam vel eos dolores iusto. Ullam cum sint. Tenetur quis ad numquam at dolor. Dolorem natus magnam ut. Cumque porro praesentium neque nihil laboriosam fuga beatae.
 Dolor odit omnis est aut ipsum dignissimos exercitationem sed. Perferendis animi explicabo quaerat error voluptate. Id perferendis eius ducimus sit ipsam impedit non eos.
 Occaecati est sed repellat dolores beatae. Quas neque deleniti. Adipisci ullam ea similique dolores at recusandae laboriosam dicta deserunt. Et at aliquid dignissimos. Soluta cum similique et vero quam qui. Consequatur doloribus beatae eos et sit non voluptas explicabo.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Tenetur quam magnam quo vitae.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "40",
      "links": Object {
        "self": "http://localhost:4000/posts/40",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "61",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "34",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/34",
          },
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "47",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "6",
              "type": "tags",
            },
            Object {
              "id": "73",
              "type": "tags",
            },
            Object {
              "id": "86",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Ipsam doloribus voluptatum voluptatum velit sed. Debitis cupiditate sed quo est cum voluptas nihil qui. Quia accusantium atque eos voluptatem est blanditiis. Non cupiditate aut tenetur accusantium enim.
 Ut inventore cum iure possimus. Aliquid modi iste facilis dolore aliquam non. Quae in enim totam et totam maxime animi praesentium.
 Modi qui in et quidem quia. Unde non provident. Vero excepturi dolore aut culpa qui rerum vel optio.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Enim explicabo exercitationem quia esse quia modi perspiciatis quo voluptatem.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "44",
      "links": Object {
        "self": "http://localhost:4000/posts/44",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "59",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "85",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/85",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "32",
              "type": "tags",
            },
            Object {
              "id": "44",
              "type": "tags",
            },
            Object {
              "id": "60",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Voluptates fuga iste et labore eligendi. Repellat voluptas dolore soluta sequi incidunt nam ut qui. Ab laudantium rerum officiis. Cumque qui soluta ut voluptas et quisquam nihil et. Quis eos ex atque suscipit velit illo. Quam sint qui rem sit itaque aut voluptatem.
 Qui aut rem voluptas necessitatibus quo iure quibusdam. Est sit aut labore atque hic illum ut. Harum sequi sit est quis. Ipsa nobis dignissimos. Ut debitis atque molestiae libero officia.
 Numquam dolorem voluptatibus mollitia omnis adipisci eligendi. Omnis eveniet enim quibusdam magni. Nisi assumenda impedit voluptas quia. Voluptas veritatis sapiente.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Voluptates ea doloremque magni ad accusamus laudantium sed.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "45",
      "links": Object {
        "self": "http://localhost:4000/posts/45",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": Object {
            "id": "84",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/84",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Fuga facere maxime fugiat. Et sit sed unde. Qui ullam placeat sunt aperiam vel quod commodi.
 Recusandae ut aliquid reprehenderit enim dignissimos facilis ipsum omnis aperiam. Aspernatur dolorem ipsa nobis consectetur assumenda autem sint. Explicabo tempore repellat aut molestias eos. Veritatis ad ducimus at molestiae ipsam enim nemo sit.
 Nesciunt est corporis dolores similique ut ipsa. Ut laboriosam eos. Ex adipisci qui enim aliquam. Autem nobis id adipisci sequi commodi consectetur. Voluptas aut qui. Ea ratione laudantium sed sed qui voluptas sapiente.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Totam dolore aut facere eligendi maiores sapiente quo.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "46",
      "links": Object {
        "self": "http://localhost:4000/posts/46",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "57",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "52",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/52",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "28",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Dolorem impedit in eveniet. Enim aut eaque repellat. Corporis sed sequi inventore enim provident. Culpa occaecati ipsa.
 Doloremque qui rerum repellat officia quibusdam aliquam quas. Quis aliquid ea. Perspiciatis iste reiciendis vero.
 Repudiandae consequatur blanditiis. Iusto voluptatem nam sit inventore. Sed est nihil delectus eveniet dolores voluptates non officia officia. Eos accusantium iusto et soluta veritatis culpa id ut et.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Sint corporis facilis sit rerum.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "48",
      "links": Object {
        "self": "http://localhost:4000/posts/48",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "65",
              "type": "tags",
            },
            Object {
              "id": "76",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Repellendus libero dolorem nobis velit qui accusantium omnis. Minus provident sequi ut. Velit quia consequatur modi quia rem sint quibusdam quia.
 Facere atque et sequi eaque numquam autem est corrupti explicabo. Harum distinctio hic sequi placeat ipsum nulla. Minima architecto delectus quos id rerum ullam possimus. Nihil est sed. Et unde et voluptatem quas nihil quisquam molestiae et.
 Deserunt molestias consectetur. Aut maxime aut debitis unde neque quia laudantium ducimus. Nisi voluptatem incidunt perferendis molestiae magnam amet quis consequuntur. Id ipsa enim et.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Soluta omnis molestiae.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "52",
      "links": Object {
        "self": "http://localhost:4000/posts/52",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "49",
              "type": "comments",
            },
            Object {
              "id": "91",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": null,
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Qui doloremque omnis eum doloribus maiores. Quibusdam voluptas maiores aut totam tenetur laborum earum alias. Sint nobis ut. Nisi non sint maxime ea.
 Omnis dolor ab reiciendis quia quasi. Sunt possimus maxime voluptas inventore expedita alias tempora. Et fuga voluptatem illum aliquam aut vero.
 Et quo et dolores. Ipsum odit illo vel nostrum. Minus in ipsam nisi cupiditate odit illo occaecati eum. Placeat est quis ut eos quos quo. In aperiam similique magni molestiae molestiae iusto quia qui occaecati. Expedita quis sapiente voluptas aut explicabo.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Dolore non et et atque officia accusamus qui ex enim.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "56",
      "links": Object {
        "self": "http://localhost:4000/posts/56",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "8",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "29",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/29",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "9",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Aliquam sunt iusto animi repellat eius commodi. In quo dolor praesentium mollitia id. Qui excepturi ut voluptatem sit deleniti et. Sapiente voluptate odio. Voluptatem omnis harum amet consequatur doloremque dolore earum accusantium ullam.
 Sed vitae id sit aliquid at. Tempore earum exercitationem. Sit ducimus non accusamus sed eligendi et tenetur.
 Tempore est eius vitae et neque voluptatibus. Perspiciatis reiciendis at eos ratione suscipit doloribus. Hic delectus sunt dolorum molestiae dolorum. Assumenda rerum minima quia iusto. Porro iste voluptatem et.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Vero qui perferendis maiores soluta a.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "57",
      "links": Object {
        "self": "http://localhost:4000/posts/57",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "26",
              "type": "comments",
            },
            Object {
              "id": "90",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "27",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/27",
          },
        },
        "reactions": Object {
          "data": Array [
            Object {
              "id": "75",
              "type": "reactions",
            },
          ],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "83",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Enim voluptas illo autem sequi id ut sapiente sit animi. Et eligendi autem fuga et ipsum ut tempore aut ea. Dolorem aut quis cum voluptas. Delectus aperiam voluptatem praesentium dolorem expedita ut nemo.
 Magni eum vitae voluptas. Dolores nobis vel inventore unde magni. Inventore quis tenetur cum itaque ut repellendus aut sit. Est rem sed nulla ad facere illum. Deleniti deleniti dolor cum deserunt optio. Sed fugit adipisci et quisquam.
 Voluptatem eum vero id consequatur modi aut adipisci quibusdam est. Dolorum sed doloremque sit dolor consequatur. Atque enim fugit omnis porro architecto nihil. Est aut fuga quia. Hic asperiores pariatur unde optio consequatur non quas. Deserunt et veritatis laudantium ea provident voluptatem.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Et quis aut maxime et eum et.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "58",
      "links": Object {
        "self": "http://localhost:4000/posts/58",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "16",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "13",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/13",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [
            Object {
              "id": "53",
              "type": "tags",
            },
          ],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
    Object {
      "attributes": Object {
        "body": "Eos et culpa quia corporis cumque eos incidunt aspernatur. Distinctio tenetur inventore soluta sint. Et in ad vitae sint et.
 Sit minus magnam. Libero fugiat eos. Expedita inventore consequatur aut ipsa omnis iure. Temporibus repellendus voluptatem inventore eos saepe beatae et laudantium. Optio velit culpa explicabo fuga sed ab maxime ab optio.
 Et debitis aspernatur in eius inventore quia ducimus sapiente. Veniam libero repellat ipsum qui ducimus amet aut. Id saepe ut. Repudiandae et recusandae labore omnis.",
        "created-at": 2017-02-13T13:30:30.294Z,
        "title": "Ducimus ut tenetur blanditiis iusto sit.",
        "updated-at": 2017-02-13T13:30:30.294Z,
      },
      "id": "59",
      "links": Object {
        "self": "http://localhost:4000/posts/59",
      },
      "relationships": Object {
        "comments": Object {
          "data": Array [
            Object {
              "id": "95",
              "type": "comments",
            },
            Object {
              "id": "97",
              "type": "comments",
            },
          ],
        },
        "image": Object {
          "data": Object {
            "id": "77",
            "type": "images",
          },
          "links": Object {
            "self": "http://localhost:4000/images/77",
          },
        },
        "reactions": Object {
          "data": Array [],
        },
        "tags": Object {
          "data": Array [],
        },
        "user": Object {
          "data": null,
        },
      },
      "type": "posts",
    },
  ],
  "jsonapi": Object {
    "version": "1.0",
  },
  "links": Object {
    "self": "http://localhost:4000/posts",
  },
}
`;

exports[`module "router/route/action" enhancer resource() - type "member" - with "admin" namespace resolves with a serialized payload 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "body": "Esse rem odio voluptatem. Adipisci maxime eum nam. Ea porro sint aut dignissimos pariatur animi et non. Quasi ut maxime numquam quis aliquid non ut.
 Quisquam pariatur et quaerat impedit exercitationem. Illo dolor consequatur aut laudantium earum voluptatem. Odit numquam maxime praesentium. Sint dolorem qui sint dolor qui odio ipsa officiis in.
 Illo veniam sint autem nemo et illo voluptas placeat reiciendis. Sed voluptatibus quae adipisci. Quos et quisquam id quis rerum et autem. Vel assumenda id facilis non velit libero dolorem quis quidem. Officiis quidem soluta vel eius perferendis accusantium deleniti ratione ipsam.",
      "created-at": 2017-02-13T13:30:30.291Z,
      "title": "Aut placeat praesentium porro aliquid modi.",
      "updated-at": 2017-02-13T13:30:30.291Z,
    },
    "id": "1",
    "relationships": Object {
      "comments": Object {
        "data": Array [
          Object {
            "id": "7",
            "type": "comments",
          },
          Object {
            "id": "51",
            "type": "comments",
          },
          Object {
            "id": "80",
            "type": "comments",
          },
        ],
      },
      "image": Object {
        "data": null,
      },
      "reactions": Object {
        "data": Array [],
      },
      "tags": Object {
        "data": Array [],
      },
      "user": Object {
        "data": null,
      },
    },
    "type": "posts",
  },
  "jsonapi": Object {
    "version": "1.0",
  },
  "links": Object {
    "self": "http://localhost:4000/admin/posts/1",
  },
}
`;

exports[`module "router/route/action" enhancer resource() - type "member" - with "root" namespace resolves with a serialized payload 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "body": "Esse rem odio voluptatem. Adipisci maxime eum nam. Ea porro sint aut dignissimos pariatur animi et non. Quasi ut maxime numquam quis aliquid non ut.
 Quisquam pariatur et quaerat impedit exercitationem. Illo dolor consequatur aut laudantium earum voluptatem. Odit numquam maxime praesentium. Sint dolorem qui sint dolor qui odio ipsa officiis in.
 Illo veniam sint autem nemo et illo voluptas placeat reiciendis. Sed voluptatibus quae adipisci. Quos et quisquam id quis rerum et autem. Vel assumenda id facilis non velit libero dolorem quis quidem. Officiis quidem soluta vel eius perferendis accusantium deleniti ratione ipsam.",
      "created-at": 2017-02-13T13:30:30.291Z,
      "title": "Aut placeat praesentium porro aliquid modi.",
      "updated-at": 2017-02-13T13:30:30.291Z,
    },
    "id": "1",
    "relationships": Object {
      "comments": Object {
        "data": Array [
          Object {
            "id": "7",
            "type": "comments",
          },
          Object {
            "id": "51",
            "type": "comments",
          },
          Object {
            "id": "80",
            "type": "comments",
          },
        ],
      },
      "image": Object {
        "data": null,
      },
      "reactions": Object {
        "data": Array [],
      },
      "tags": Object {
        "data": Array [],
      },
      "user": Object {
        "data": null,
      },
    },
    "type": "posts",
  },
  "jsonapi": Object {
    "version": "1.0",
  },
  "links": Object {
    "self": "http://localhost:4000/posts/1",
  },
}
`;
